テスト作成

--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -4,7 +4,7 @@
     <div id="error_explanation">
       <h2><%= @task.errors.count %>件のエラーがあります。</h2>
       <ul>
-        <% @task.errors.full.messages.each do |msg|%>
+        <% @task.errors.full_messages.each do |msg|%>
           <li><%= msg %></li>
         <% end %>
       </ul>
