--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -7,8 +7,8 @@
     </tr>
     <% @tasks.each do |task| %>
     <tr>
-      <td><%= task.title %></td>
-      <td><%= task.content %></td>
+      <td class="task_row"><%= task.title %></td>
+      <td class="task_row"><%= task.content %></td>
       <td><% link_to "詳細を確認する。", task_path(task.id) %></td>
       <td><%= link_to "タスクを編集する", edit_task_path(task.id), data: { confirm: '本当に編集していいですか？' } %></td>
       <td><%= link_to "タスクを削除する", task_path(task.id), method: :delete, data: { confirm: '本当に削除していいですか？' } %></td>
