期限が迫っている順に並び替える機能実装

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -10,7 +10,7 @@
     <tr>
       <td class="task_row"><%= task.title %></td>
       <td class="task_row"><%= task.content %></td>
-      <td><%= task.time_limit %></td>
+      <td class="task_limit_row"><%= task.time_limit %></td>
       <td><% link_to "詳細を確認する。", task_path(task.id) %></td>
       <td><%= link_to "タスクを編集する", edit_task_path(task.id), data: { confirm: '本当に編集していいですか？' } %></td>
       <td><%= link_to "タスクを削除する", task_path(task.id), method: :delete, data: { confirm: '本当に削除していいですか？' } %></td>
@@ -18,4 +18,5 @@
     </tr>
   </table>
 </div>
+<%= link_to "終了期限でソートする", tasks_path(sort_expired: "true") %>
 <%= link_to '新しくタスクを追加する', new_task_path %>
