--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @task, local: true, url: tasks_path ) do |form| %>
+<%= form_with(model: @task, local: true, url: tasks_path ) do |f| %>
   <% if @task.errors.any? %>
     <div id="error_explanation">
       <h2><%= @task.errors.count %>件のエラーがあります。</h2>
@@ -10,18 +10,20 @@
     </div>
   <% end %>
   <div class="task_title">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
+    <%= f.label :title %>
+    <%= f.text_field :title %>
   </div>
   <div class="task_content">
-    <%= form.label :content %>
-    <%= form.text_field :content %>
+    <%= f.label :content %>
+    <%= f.text_field :content %>
   </div>
   <div class="task_time_limit">
-    <%= form.label :time_limit %>
-    <%= form.datetime_select :time_limit %>
+    <%= f.label :time_limit %>
+    <%= f.datetime_select :time_limit %>
   </div>
 
-  <%= form.submit %>
+  <%= f.select :priority, [["着手", "already"], ["未着手", "not_yet"]], include_blank: "選択して下さい" %>
+
+  <%= f.submit %>
 <% end %>
 <%= link_to t('view.back'), tasks_path %>
