--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -36,3 +36,4 @@
 <%= link_to "優先順位でソートする", tasks_path(sort_to_do: "true") %>
 <%= link_to "終了期限でソートする", tasks_path(sort_expired: "true") %>
 <%= link_to '新しくタスクを追加する', new_task_path %>
+<%= paginate @tasks %>
