--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @task, local: true, url: tasks_path ) do |f| %>
+<%= form_with(model: @task, local: true, url: confirm_new_or_edit ) do |f| %>
   <% if @task.errors.any? %>
     <div id="error_explanation">
       <h2><%= @task.errors.count %>件のエラーがあります。</h2>
