--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,33 +1,2 @@
 <h1>タスク編集</h1>
-<%= form_with(model: @task, local: true) do |form| %>
-  <% if @task.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= @task.errors.count %>件のエラーがあります。</h2>
-      <ul>
-        <% @task.errors.full_messages.each do |msg|%>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-  <div class="task_title">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
-  </div>
-  <div class="task_content">
-    <%= form.label :content %>
-    <%= form.text_field :content %>
-  </div>
-
-  <div class="task_time_limit">
-    <%= form.label :time_limit %>
-    <%= form.datetime_select :time_limit %>
-  </div>
-
-  <div class="task_priority">
-    <%= form.label :priority %>
-    <%= form.text_field :priority %>
-  </div>
-
-  <%= form.submit %>
-<% end %>
+<%= render 'form' %>
