--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @user, local: true ,url: choose_new_or_edit) do |f| %>
+<%= form_with(model: @user, local: true, url: admin_user_path ) do |f| %>
   <div class="center">
     <%= f.label :name %>
     <%= f.text_field :name %>
