--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -15,7 +15,7 @@
       <td class="user_length"><%= user.tasks.length %></td>
       <td><%= link_to "詳細を確認する。", admin_user_path(user.id) %></td>
       <td><%= link_to "タスクを編集する", edit_admin_user_path(user.id), data: { confirm: '本当に編集していいですか？' } %></td>
-      <td><%= link_to "タスクを削除する", admin_users_path(user.id), method: :delete, data: { confirm: '本当に削除していいですか？' } %></td>
+      <td><%= link_to "タスクを削除する", admin_user_path(user.id), method: :delete, data: { confirm: '本当に削除していいですか？' } %></td>
       <% end %>
     </tr>
   </table>
