--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -8,7 +8,7 @@
       <th>メール</th>
     </tr>
     <% @users.each do |user| %>
-    <tr>
+    <tr class='user_list'>
       <td class="user_id"><%= user.id %></td>
       <td class="user_name"><%= user.name %></td>
       <td class="user_email"><%= user.email %></td>
@@ -16,8 +16,8 @@
       <td><%= link_to "詳細を確認する。", admin_user_path(user.id) %></td>
       <td><%= link_to "タスクを編集する", edit_admin_user_path(user.id), data: { confirm: '本当に編集していいですか？' } %></td>
       <td><%= link_to "タスクを削除する", admin_user_path(user.id), method: :delete, data: { confirm: '本当に削除していいですか？' } %></td>
-      <% end %>
     </tr>
+    <% end %>
   </table>
 </div>
-<%= link_to '新しく管理者を追加する', new_admin_user_path %>
+<%= link_to '新しくユーザーを追加する', new_admin_user_path %>
