添削箇所修正

--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -11,6 +11,9 @@
 
     <%= f.label :password_confirmation %>
     <%= f.password_field :password_confirmation %>
+
+    <%= f.label :admin %>
+    <%= f.check_box :admin, {}, 'true', 'false' %>
     <br>
 
     <%= f.submit '登録' %>
