--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -6,12 +6,14 @@
       <th>ユーザーid</th>
       <th>名前</th>
       <th>メール</th>
+      <th>アドミン</th>
     </tr>
     <% @users.each do |user| %>
     <tr class='user_list'>
       <td class="user_id"><%= user.id %></td>
       <td class="user_name"><%= user.name %></td>
       <td class="user_email"><%= user.email %></td>
+      <td><%= user.admin %></td>
       <td class="user_length"><%= user.tasks.length %></td>
       <td><%= link_to "詳細を確認する。", admin_user_path(user.id) %></td>
       <td><%= link_to "タスクを編集する", edit_admin_user_path(user.id), data: { confirm: '本当に編集していいですか？' } %></td>
