--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,6 +40,9 @@
       <% if logged_in? %>
        <%= link_to "Profile", user_path(current_user.id) %>
        <%= link_to "Logout", session_path(current_user.id), method: :delete %>
+       <% if current_user.admin? %>
+          <%= link_to "Admin", admin_users_path(current_user.id) %>
+       <% end %>
      <% else %>
        <%= link_to "Sign up", new_user_path %>
        <%= link_to "Login", new_session_path %>
