--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,10 +5,10 @@
 <div class="search-form">
   <%= form_with(scope: :search, url: tasks_path, method: :get, local: true) do |f| %>
     <%= f.text_field :title %>
-    <%= f.select :priority, [["未着手", 0 ], ["着手中", 1 ], ["完了", 2 ]] %>
-      <%= f.select :label_id, Label.all.collect { |p| [ p.name, p.id ] }, include_blank: true %>
+    <%= f.select :priority, [["未着手", 0 ], ["着手中", 1 ], ["完了", 2 ]], include_blank: true , selected:'' %>
+      <%= f.select :label_id, Label.all.collect { |p| [ p.name, p.id] }, include_blank: true , selected:''%>
     <%= f.submit '検索' %>
-  
+
   <% end %>
 </div>
 
@@ -38,4 +38,4 @@
 <%= link_to "優先順位でソートする", tasks_path(sort_to_do: "true") %>
 <%= link_to "終了期限でソートする", tasks_path(sort_expired: "true") %>
 <%= link_to '新しくタスクを追加する', new_task_path %>
-<%= paginate @tasks %>
+<%= paginate @kaminari %>
